--- a/app/src/main/res/layout/fragment_nuovo_annuncio_maps.xml
+++ b/app/src/main/res/layout/fragment_nuovo_annuncio_maps.xml
@@ -11,8 +11,22 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bt_invio_dati"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/bt_current_position"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bt_current_position"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
+        android:layout_marginBottom="10dp"
+        android:text="@string/get_current_position"
+        app:layout_constraintBottom_toTopOf="@+id/bt_invio_dati"
+        app:layout_constraintEnd_toEndOf="@+id/bt_invio_dati"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/bt_invio_dati"
+        app:layout_constraintTop_toBottomOf="@+id/map" />
 
     <Button
         android:id="@id/bt_invio_dati"
@@ -27,4 +41,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
