--- a/app/src/main/res/navigation/my_nav_nuovo_annuncio.xml
+++ b/app/src/main/res/navigation/my_nav_nuovo_annuncio.xml
@@ -12,7 +12,15 @@
         tools:layout="@layout/fragment_nuovo_annuncio_dati" >
         <action
             android:id="@+id/action_datiFragment_to_mapsFragment"
-            app:destination="@id/mapsFragment" />
+            app:destination="@id/mapsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right">
+            <argument
+                android:name="materiale_provvisorio"
+                app:argType="com.example.usedbooks.dataClass.Materiale" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
@@ -21,7 +29,15 @@
         tools:layout="@layout/fragment_nuovo_annuncio_maps" >
         <action
             android:id="@+id/action_mapsFragment_to_cameraFragment"
-            app:destination="@id/cameraFragment" />
+            app:destination="@id/cameraFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right">
+            <argument
+                android:name="materiale_provvisorio"
+                app:argType="com.example.usedbooks.dataClass.Materiale"/>
+        </action>
     </fragment>
     <fragment
         android:id="@+id/cameraFragment"
