--- a/app/src/main/res/layout/fragment_nuovo_annuncio_dati.xml
+++ b/app/src/main/res/layout/fragment_nuovo_annuncio_dati.xml
@@ -17,16 +17,20 @@
         android:layout_marginTop="10dp"
         android:hint="@string/title"
 
+        android:text="@string/testtext"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_descrizione_new_annuncio"
+
         style="@style/primaryStyleTextView"
         android:layout_width="0dp"
-
         android:layout_height="0dp"
+
+        android:text="@string/testtext"
 
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="10dp"
@@ -40,29 +44,31 @@
 
     <EditText
         android:id="@+id/et_tipologia_new_annuncio"
+
         style="@style/primaryStyleTextView"
         android:layout_width="0dp"
-
         android:layout_height="wrap_content"
-
         android:layout_marginHorizontal="50dp"
         android:layout_marginBottom="10dp"
 
+        android:text="@string/testtext"
         android:hint="@string/typology"
+
         app:layout_constraintBottom_toTopOf="@+id/et_prezzo_new_annuncio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/et_prezzo_new_annuncio"
+
         style="@style/primaryStyleTextView"
         android:layout_width="0dp"
-
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
-
         android:layout_marginBottom="20dp"
+
         android:hint="@string/price"
+        android:text="@string/testnumber"
 
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/bt_invio_dati"
