- Passaggio del materiale provvisorio da MapsFragment.kt a CameraFragment.kt - Implementata chiamata a Database.kt per aggiungere un nuovo annuncio - Aggiunta stringa corso richiesta all'aggiunta di un annuncio in MaterialeDaAggiungere.kt e in fragment_nuovo_annuncio_dati.xml - Sistemata grafica fragment_nuovo_annuncio_dati.xml

--- a/app/src/main/res/layout/fragment_nuovo_annuncio_camera.xml
+++ b/app/src/main/res/layout/fragment_nuovo_annuncio_camera.xml
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btn_send_data"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -44,7 +44,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_send_data"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
