- Sistemata grafica fragment_home.xml - Sistemata grafica fragment_profile.xml - Estratta classe MaterialeRecyclerAdapter.kt da HomeFragment.kt - Aggiunto stato vendita del materiale in list_item_material_complete.xml - Creata lista degli annunci pubblicati sul ProfileFragment.kt

--- a/app/src/main/res/layout/fragment_materiale.xml
+++ b/app/src/main/res/layout/fragment_materiale.xml
@@ -63,8 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:layout_marginTop="48dp"
-            app:layout_constraintEnd_toEndOf="@+id/tv_prezzo"
-            app:layout_constraintStart_toStartOf="@+id/tv_prezzo"
+            app:layout_constraintEnd_toEndOf="@+id/tv_nome_materiale"
+            app:layout_constraintStart_toStartOf="@+id/tv_nome_materiale"
             app:layout_constraintTop_toBottomOf="@id/tv_prezzo" />
 
         <Button
